--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ameraz.android.cipdfcapture.app" >
 
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -15,6 +18,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".filebrowser.FileChooser"
+            android:label="Choose File"
+            android:theme="@android:style/Theme.Holo">
+            <action android:name="filexplore.myapplication2.FileChooser" />
+
+            <category android:name="android.intent.category.DEFAULT" />
         </activity>
     </application>
 
