--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
     compile files('libs/itextpdf-5.5.1.jar')
+    compile files('libs/apache-mime4j-core-0.7.2.jar')
+    compile files('libs/httpclient-4.3.5.jar')
 }
