--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+
     defaultConfig {
         applicationId "com.ameraz.android.cipdfcapture.app"
         minSdkVersion 14
@@ -17,12 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
-    compile files('libs/itextpdf-5.5.1.jar')
-    compile files('libs/apache-mime4j-core-0.7.2.jar')
-    compile files('libs/httpclient-4.3.5.jar')
 }
