--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.squareup.picasso:picasso:2.2.+'
 }
