--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.squareup.picasso:picasso:2.2.+'
+    compile 'com.squareup.wire:wire-runtime:1.5.1'
 }
