--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.squareup.wire:wire-runtime:1.5.1'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'org.webjars:pdf-js:1.0.277'
+    //compile 'com.joanzapata.pdfview:android-pdfview:1.0.1@jar'
+    compile 'com.joanzapata.pdfview:android-pdfview:1.+@aar'
+    compile 'com.android.support:appcompat-v7:20.0+'
 }
