--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,20 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/sw_background"
+        android:logo="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/LightTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name="MediaShare"
-            android:label="@string/app_name"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
