Added scrollview for the textview in preview fragment. Removed setting the title in MainActivity and Navigation Drawer. Removed a few styles that were no longer needed. Fixed linear layout settings for the instantiated listview items.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/sw_background"
         android:logo="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/LightTheme">
+        android:theme="@style/SystemwareTheme">
         <activity
             android:name=".MainActivity"
             android:screenOrientation="nosensor">
