--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:hardwareAccelerated="true"
         android:allowBackup="true"
-        android:icon="@drawable/sw_background"
+        android:icon="@drawable/cloudcaptureicon"
         android:logo="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/SystemwareTheme">
